# agno-dev-toolkit

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  claude_code_mcp_config.json  mcp.json  pyproject.toml  requirements.txt  setup.sh  start.sh  test_chunker.py  verify_query.py
.github/workflows/: python-app.yml
analysis/ast/: parser.py  semantic_chunker.py
analysis/graph/: dependency_graph.py
config/: settings.py
dev/: inspect_chroma.py
example_project/: broken_agent.py
example_project/agents/: support_agent.py
example_project/schemas/: user.py
example_project/tools/: email_tool.py
mcp_server/: server.py  stdio_transport.py
mcp_server/core/: dispatcher.py  registry.py  tracer.py
mcp_server/tools/architecture/: __init__.py  agno_stack_knowledge.py  get_architecture_plan.py
mcp_server/tools/explanation/: explain_validation_failure.py
mcp_server/tools/observability/: get_execution_traces.py
mcp_server/tools/project/: query_local_architecture.py  read_project_graph.py
mcp_server/tools/rag/: query_framework_knowledge.py
rag/ingestion/: ast_extractor.py  chunker.py  clone_repo.py  distiller.py  embedder.py  extract_tests.py  hash_store.py  pipeline.py
rag/storage/: chroma_backend.py  factory.py  milvus_client.py  vector_store.py
scripts/: ensure_server_running.sh  ingest_agno_tests.sh  run_server.sh
tests/: test_mcp_integration.py  test_semantic_chunker.py
validation/engine/: validator.py
validation/rules/: __init__.py  async_rule.py  circuit_breaker_rule.py  loop_rule.py  pydantic_rule.py  state_rule.py  tool_design_rule.py
(+1 files in other folders)
